# django-form

./: README.md  db.sqlite3  pyproject.toml
job_application/: forms.py  models.py  views.py
job_application/migrations/: 0001_initial.py
job_application/templates/: index.html
mysite/: settings.py
